--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
     "portfinder-sync": "0.0.2",
+    "postprocessing": "^6.23.5",
     "raw-loader": "^4.0.2",
     "style-loader": "^2.0.0",
     "three": "^0.126.0",
